--- a/Day05PeopleBinding/Day05PeopleBinding/MainWindow.xaml
+++ b/Day05PeopleBinding/Day05PeopleBinding/MainWindow.xaml
@@ -7,15 +7,19 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <ListView x:Name="lvPeople" HorizontalAlignment="Left" Height="202" Margin="24,50,0,0" VerticalAlignment="Top" Width="216">
+        <ListView x:Name="lvPeople" HorizontalAlignment="Left" Height="202" Margin="24,50,0,0" VerticalAlignment="Top" Width="216" SelectionChanged="lvPeople_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="ID" Width="30" DisplayMemberBinding="{Binding Id}" />
                     <GridViewColumn Header="Name" Width="115" DisplayMemberBinding="{Binding Name}" />
                     <GridViewColumn Header="Age" Width="60" DisplayMemberBinding="{Binding Age}" />
-
-                </GridView>
+                </GridView>                
             </ListView.View>
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    
+                </ContextMenu>
+            </ListView.ContextMenu>
         </ListView>
         <Label Content="ID:" HorizontalAlignment="Left" Height="29" Margin="245,50,0,0" VerticalAlignment="Top" Width="44"/>
         <Label Content="Name:" HorizontalAlignment="Left" Height="29" Margin="245,84,0,0" VerticalAlignment="Top" Width="44"/>
@@ -23,8 +27,7 @@
         <Button x:Name="btnUpdate" Content="Update" HorizontalAlignment="Left" Margin="267,199,0,0" VerticalAlignment="Top" Width="75" Click="btnUpdate_Click"/>
         <Button x:Name="btnAdd" Content="Add" HorizontalAlignment="Left" Margin="381,199,0,0" VerticalAlignment="Top" Width="75" Click="btnAdd_Click"/>
         <TextBox x:Name="tbName" HorizontalAlignment="Left" Height="23" Margin="294,88,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="tbAge" HorizontalAlignment="Left" Height="23" Margin="294,122,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="lblID" Content="" HorizontalAlignment="Left" Margin="280,53,0,0" VerticalAlignment="Top" Width="62"/>
-
+        <TextBox x:Name="tbAge" HorizontalAlignment="Left" Height="23" Margin="294,122,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" PreviewTextInput="tbAge_PreviewTextInput"/>
+        <Label x:Name="lblID" Content="..." HorizontalAlignment="Left" Margin="280,48,0,0" VerticalAlignment="Top" Width="62"/>
     </Grid>
 </Window>
