--- a/Day05ZooFull/Day05ZooFull/MainWindow.xaml
+++ b/Day05ZooFull/Day05ZooFull/MainWindow.xaml
@@ -5,8 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Day05ZooFull"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="316.715" Width="622.839">
     <Grid>
-        
+        <Menu HorizontalAlignment="Left" Height="19" VerticalAlignment="Top" Width="517">
+            <MenuItem Header="_File">
+                <MenuItem x:Name="miOpen" Header="_Open..." Click="miOpen_Click"/>
+                <MenuItem x:Name="miSaveAs" Header="_Save as..." Click="miSaveAs_Click"/>
+                <Separator/>
+                <MenuItem x:Name="miExit" Header="_Exit" Click="miExit_Click"/>
+            </MenuItem>
+        </Menu>
+        <ListView x:Name="lvSpeciesName" HorizontalAlignment="Left" Height="203" Margin="22,45,0,0" VerticalAlignment="Top" Width="206" SelectionChanged="lvSpeciesName_SelectionChanged">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Species" Width="100" DisplayMemberBinding="{Binding Species}" />
+                    <GridViewColumn Header="Name" Width="100" DisplayMemberBinding="{Binding Name}" />
+                </GridView>
+            </ListView.View>
+            <ListView.ContextMenu>
+                <ContextMenu Name="ctxMenuMain" StaysOpen="true" Background="WhiteSmoke">
+                    <MenuItem Header="Delete" Click="MenuItem_DeleteClick"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
+        </ListView>
+        <Label Content="Species" HorizontalAlignment="Left" Margin="263,45,0,0" VerticalAlignment="Top"/>
+        <Label Content="Name:" HorizontalAlignment="Left" Margin="263,76,0,0" VerticalAlignment="Top"/>
+        <Label Content="Age:" HorizontalAlignment="Left" Margin="263,107,0,0" VerticalAlignment="Top"/>
+        <Label Content="Weight:" HorizontalAlignment="Left" Margin="263,138,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbName" HorizontalAlignment="Left" Height="23" Margin="312,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="tbAge" HorizontalAlignment="Left" Height="23" Margin="312,110,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="tbWeight" HorizontalAlignment="Left" Height="23" Margin="312,141,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="cbSpecies" HorizontalAlignment="Left" Margin="318,49,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBoxItem IsSelected="True">Lion</ComboBoxItem>
+            <ComboBoxItem>Elephant</ComboBoxItem>
+            <ComboBoxItem>Hippo</ComboBoxItem>
+            <ComboBoxItem>Ape</ComboBoxItem>
+            <ComboBoxItem>Zebra</ComboBoxItem>
+            <ComboBoxItem>Bird</ComboBoxItem>
+        </ComboBox>
+        <Button x:Name="btnAdd" Content="Add" HorizontalAlignment="Left" Margin="509,51,0,0" VerticalAlignment="Top" Width="75" Click="btnAdd_Click"/>
+        <Button x:Name="btnUpdate" Content="Update" HorizontalAlignment="Left" Margin="509,95,0,0" VerticalAlignment="Top" Width="75" Click="btnUpdate_Click"/>
+        <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Left" Margin="509,138,0,0" VerticalAlignment="Top" Width="75" Click="btnDelete_Click"/>
     </Grid>
 </Window>
