--- a/GymManagment/GymManagment/Reservation.xaml
+++ b/GymManagment/GymManagment/Reservation.xaml
@@ -8,13 +8,13 @@
         Title="Schedule" Height="286.408" Width="454.369">
     <Grid>
         <DatePicker HorizontalAlignment="Left" Margin="54,45,0,0" VerticalAlignment="Top"/>
-        <Label Content="Create Schedule" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold"/>
+        <Label Content="Create Reservation" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold"/>
         <Label Content="Date:" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="cbTrainer" HorizontalAlignment="Left" Margin="63,74,0,0" VerticalAlignment="Top" Width="120">
             <ComboBoxItem>Frank T</ComboBoxItem>
             <ComboBoxItem>Joey B</ComboBoxItem>
             <ComboBoxItem>Philip D</ComboBoxItem>
-            <ComboBoxItem>Brittney A</ComboBoxItem>            
+            <ComboBoxItem>Brittney A</ComboBoxItem>
         </ComboBox>
         <Label Content="Trainer:" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
         <Label Content="Start Time:" HorizontalAlignment="Left" Margin="10,101,0,0" VerticalAlignment="Top"/>
@@ -46,10 +46,7 @@
             <ComboBoxItem>Jiu Jitsu</ComboBoxItem>
             <ComboBoxItem>Boxing</ComboBoxItem>
         </ComboBox>
-        <Label Content="Session:" HorizontalAlignment="Left" Margin="234,44,0,0" VerticalAlignment="Top"/>
         <Label Content="Class:" HorizontalAlignment="Left" Margin="234,75,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Group" HorizontalAlignment="Left" Margin="291,50,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Individual" HorizontalAlignment="Left" Margin="349,50,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
